--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ position: relative;
 top: -30px;
 left: 55px;
 z-index: 500;
-width: 50%;
+/*width: 50%;*/
 }
 
 .logo a:hover {color: var(--color-logo-hover);}
