--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ CSS Stylesheet for philboivin.com
 
 --logo-font-size : 1.4em;
 --form-font-size : 1.0em;
---menu-font-size : 1.0em;
+--menu-font-size : 1.2em;
+--menu-footer-font-size : 1.0em;
 --h1-font-size : 1.4em;
 --h2-font-size : 1.2em;
 --footer-font-size: 1.0em;
@@ -30,6 +31,9 @@ CSS Stylesheet for philboivin.com
 
 --color-menu-a: #000;
 --color-menu-a-hover: #666;
+--color-menu-hamburger: #ccc;
+--color-menu-x: #999;
+--color-menu-bg: #eee;
 
 --color-logo: #ccc;
 --color-logo-hover: #000;
@@ -44,7 +48,6 @@ CSS Stylesheet for philboivin.com
 --color-social-icons : #fff;
 --color-social-icons-hover : #ccc;
 --color-copy : #666;
-
 
 }
 
@@ -80,7 +83,6 @@ position: relative;
 top: -30px;
 left: 55px;
 z-index: 500;
-/*width: 50%;*/
 }
 
 .logo a:hover {color: var(--color-logo-hover);}
@@ -113,6 +115,88 @@ main p {line-height: 1.4; margin: 10px 0 15px 0;}
 .col {flex: 50%;}
 
 #gallery-publications {filter: grayscale(100%);}
+
+
+
+
+/******************************************/
+/* Menu (mady by Erik Terwan - MIT License)              
+/******************************************/
+
+#menuToggle {display: block; position: relative; z-index: 100; -webkit-user-select: none; user-select: none;}
+#menuToggle a { text-decoration: none; color: var(--color-menu-a); transition: color 0.3s ease;}
+#menuToggle a:hover { color: var(--color-menu-a-hover);}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  -webkit-touch-callout: none;
+}
+
+/* Hamburger */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  background: var(--color-menu-hamburger);
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child {transform-origin: 0% 0%;}
+#menuToggle span:nth-last-child(2) {transform-origin: 0% 100%;}
+
+
+/* Transform all the slices of hamburger into a crossmark. */
+#menuToggle input:checked ~ span { opacity: 1; transform: rotate(45deg) translate(-2px, -1px); background: var(--color-menu-x);}
+
+/* hide the middle one. */
+#menuToggle input:checked ~ span:nth-last-child(3) { opacity: 0; transform: rotate(0deg) scale(0.2, 0.2);}
+
+/* and the last one should go the other direction */
+#menuToggle input:checked ~ span:nth-last-child(2) { transform: rotate(-45deg) translate(0, -1px);}
+
+
+/* Make this absolute positioned at the top left of the screen */
+#menu-items
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: var(--color-menu-bg);
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  transform-origin: 0% 0%;
+  transform: translate(-190%, 0);  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu-items li {padding: 10px 0; font-size: var(--menu-font-size); }
+
+/* And let's slide it in from the left */
+#menuToggle input:checked ~ ul {transform: none;}
+
+
 
 
 /*****************************************/
@@ -194,7 +278,7 @@ footer a {color: var(--color-footer-a);}
 footer a:hover {color: var(--color-footer-a-hover);}
 
 
-footer nav {font-size: var(--menu-font-size); padding: 20px 0;}
+footer nav {font-size: var(--menu-footer-font-size); padding: 20px 0;}
 footer nav li {display: inline; padding: 0 20px 0 0;}
 
 .social-icons {padding: 20px 0;}
@@ -214,148 +298,3 @@ footer nav li {display: inline; padding: 0 20px 0 0;}
  #menu {width: var(--content-width-mobile);}
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/**** LAB **** /
-
-/*
- * Made by Erik Terwan
- * 24th of November 2015
- * MIT License
- *
- *
- * If you are thinking of using this in
- * production code, beware of the browser
- * prefixes.
- */
-
-
-
-#menuToggle
-{
-  display: block;
-  position: relative;
-  /*top: 50px;
-  left: 50px;
-  */
-  z-index: 100;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle a { text-decoration: none; color: var(--color-menu-a); transition: color 0.3s ease;}
-#menuToggle a:hover { color: var(--color-menu-a-hover);
-}
-
-
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  cursor: pointer;
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
-  -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  
-  background: #cdcdcd;
-  border-radius: 3px;
-  
-  z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child {transform-origin: 0% 0%;}
-#menuToggle span:nth-last-child(2) {transform-origin: 0% 100%;}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span { opacity: 1; transform: rotate(45deg) translate(-2px, -1px); background: #232323;}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3) { opacity: 0; transform: rotate(0deg) scale(0.2, 0.2);}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu-items
-{
-  position: absolute;
-  width: 300px;
-  margin: -100px 0 0 -50px;
-  padding: 50px;
-  padding-top: 125px;
-  background: #ededed;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-
-  transform-origin: 0% 0%;
-  transform: translate(-190%, 0);  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-#menu-items li
-{
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: none;
-}
-
-
-
