--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ CSS Stylesheet for philboivin.com
 --color-social-icons : #fff;
 --color-social-icons-hover : #ccc;
 --color-copy : #666;
+--color-hr : #ccc;
 
 }
 
@@ -72,7 +73,8 @@ h1 {font-size: var(--h1-font-size); margin: 12px 0; font-family: var(--h-font); 
 h2 {font-size: var(--h2-font-size); margin: 12px 0; font-family: var(--h-font); font-weight: normal;}
 a {color: var(--color-body-a);}
 a:hover {color: var(--color-body-a-hover); text-decoration: none;}
-
+img {max-width: 100%; height: auto;}
+hr {margin: 30px 0; border: 1px solid var(--color-hr);}
 
 .logo a {
 font-family: var(--logo-font);
@@ -113,6 +115,7 @@ main p {line-height: 1.4; margin: 10px 0 15px 0;}
 .top-spacer {margin-top: 30px;}
 .row {display: flex; padding: 10px 0;}
 .col {flex: 50%;}
+.padding-left {padding-left: 20px;}
 .portrait {width: 160px;}
 
 #gallery-publications {filter: grayscale(100%);}
@@ -291,5 +294,6 @@ footer nav li {display: inline; padding: 0 20px 0 0;}
  #content {width: var(--content-width-mobile);}
  #menu {width: var(--content-width-mobile);}
  .row {flex-direction: column;}
+ .padding-left {padding-left: 0;}
 
 }
