--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ CSS Stylesheet for philboivin.com
 
 body {
   background-color: var(--color-body-bg); 
-  font-family: var(--body-font);
+  font-family: var(--body-font), sans-serif;
   color: var(--color-body-txt);
   text-align: center;
   margin: 0 auto; 
@@ -113,7 +113,7 @@ main p {line-height: 1.4; margin: 10px 0 15px 0;}
 .success {color: green}
 .error {color: red;}
 .top-spacer {margin-top: 30px;}
-.row {display: flex; padding: 10px 0;}
+.row {display: flex; padding: 15px 0;}
 .col {flex: 50%;}
 .padding-left {padding-left: 20px;}
 .portrait {width: 160px;}
