--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ CSS Stylesheet for philboivin.com
 
 --color-body-bg: #fff;
 --color-body-txt: #000;
---color-body-a: #000;
---color-body-a-hover: #000;
+--color-body-a: #002b80;
+--color-body-a-hover: #002b80;
 
 --color-menu-a: #000;
 --color-menu-a-hover: #666;
@@ -75,8 +75,11 @@ body {
 
 h1 {font-size: var(--h1-font-size); margin: 12px 0; font-family: var(--h-font); font-weight: normal;}
 h2 {font-size: var(--h2-font-size); margin: 12px 0; font-family: var(--h-font); font-weight: normal;}
+
 a {color: var(--color-body-a);}
 a:hover {color: var(--color-body-a-hover); text-decoration: none;}
+
+
 img {max-width: 100%; height: auto;}
 hr {margin: 30px 0; border: 1px solid var(--color-hr);}
 
