--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ CSS Stylesheet for philboivin.com
 
 --color-sub-menu-li: #000;
 --color-sub-menu-border: #ccc;
---color-sub-menu-a-hover: #666;
+--color-sub-menu-a-hover: #002b80;
 
 --color-logo: #ccc;
 --color-logo-hover: #000;
