--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ main {
 }
 
 
-main p {line-height: 1.4; margin: 10px 0 15px 0;}
+main p {line-height: 1.4; margin: 10px 0 15px 0; font-size: 1.1em;}
 
 /* Backup sub-menu
 .sub-menu {margin-left: 15px;}
@@ -130,7 +130,10 @@ main p {line-height: 1.4; margin: 10px 0 15px 0;}
 .col {flex: 50%;}
 .padding-left {padding-left: 20px;}
 .portrait {width: 160px;}
-.intro p {font-size: 1.2em;}
+
+/*
+.intro p {font-size: 1.1em;}
+*/
 
 #gallery-publications {filter: grayscale(100%);}
 
